// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter Component should have default onPress event of decrement button 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-evenly",
      "width": 140,
    }
  }
>
  <Themed.Button
    buttonStyle={
      Object {
        "borderRadius": 50,
        "minWidth": 40,
      }
    }
    onPress={[Function]}
    testID="counterDecButton"
    title="-"
    titleStyle={
      Object {
        "fontSize": 18,
        "fontWeight": "bold",
        "marginTop": -2,
      }
    }
  />
  <Themed.Text
    style={
      Object {
        "fontSize": 18,
      }
    }
    testID="counterText"
  >
    1
  </Themed.Text>
  <Themed.Button
    buttonStyle={
      Object {
        "borderRadius": 50,
        "minWidth": 40,
      }
    }
    onPress={[Function]}
    testID="counterIncButton"
    title="+"
    titleStyle={
      Object {
        "fontSize": 18,
        "fontWeight": "bold",
        "marginTop": -2,
      }
    }
  />
</View>
`;

exports[`Counter Component should have default onPress event of decrement button and max less than value 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-evenly",
      "width": 140,
    }
  }
>
  <Themed.Button
    buttonStyle={
      Object {
        "borderRadius": 50,
        "minWidth": 40,
      }
    }
    onPress={[Function]}
    testID="counterDecButton"
    title="-"
    titleStyle={
      Object {
        "fontSize": 18,
        "fontWeight": "bold",
        "marginTop": -2,
      }
    }
  />
  <Themed.Text
    style={
      Object {
        "fontSize": 18,
      }
    }
    testID="counterText"
  >
    2
  </Themed.Text>
  <Themed.Button
    buttonStyle={
      Object {
        "borderRadius": 50,
        "minWidth": 40,
      }
    }
    onPress={[Function]}
    testID="counterIncButton"
    title="+"
    titleStyle={
      Object {
        "fontSize": 18,
        "fontWeight": "bold",
        "marginTop": -2,
      }
    }
  />
</View>
`;

exports[`Counter Component should have default onPress event of decrement button and min greater than value 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-evenly",
      "width": 140,
    }
  }
>
  <Themed.Button
    buttonStyle={
      Object {
        "borderRadius": 50,
        "minWidth": 40,
      }
    }
    onPress={[Function]}
    testID="counterDecButton"
    title="-"
    titleStyle={
      Object {
        "fontSize": 18,
        "fontWeight": "bold",
        "marginTop": -2,
      }
    }
  />
  <Themed.Text
    style={
      Object {
        "fontSize": 18,
      }
    }
    testID="counterText"
  >
    1
  </Themed.Text>
  <Themed.Button
    buttonStyle={
      Object {
        "borderRadius": 50,
        "minWidth": 40,
      }
    }
    onPress={[Function]}
    testID="counterIncButton"
    title="+"
    titleStyle={
      Object {
        "fontSize": 18,
        "fontWeight": "bold",
        "marginTop": -2,
      }
    }
  />
</View>
`;

exports[`Counter Component should have default onPress event of increment button 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-evenly",
      "width": 140,
    }
  }
>
  <Themed.Button
    buttonStyle={
      Object {
        "borderRadius": 50,
        "minWidth": 40,
      }
    }
    onPress={[Function]}
    testID="counterDecButton"
    title="-"
    titleStyle={
      Object {
        "fontSize": 18,
        "fontWeight": "bold",
        "marginTop": -2,
      }
    }
  />
  <Themed.Text
    style={
      Object {
        "fontSize": 18,
      }
    }
    testID="counterText"
  >
    1
  </Themed.Text>
  <Themed.Button
    buttonStyle={
      Object {
        "borderRadius": 50,
        "minWidth": 40,
      }
    }
    onPress={[Function]}
    testID="counterIncButton"
    title="+"
    titleStyle={
      Object {
        "fontSize": 18,
        "fontWeight": "bold",
        "marginTop": -2,
      }
    }
  />
</View>
`;

exports[`Counter Component should render with min max values 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-evenly",
      "width": 140,
    }
  }
>
  <Themed.Button
    buttonStyle={
      Object {
        "borderRadius": 50,
        "minWidth": 40,
      }
    }
    onPress={[Function]}
    testID="counterDecButton"
    title="-"
    titleStyle={
      Object {
        "fontSize": 18,
        "fontWeight": "bold",
        "marginTop": -2,
      }
    }
  />
  <Themed.Text
    style={
      Object {
        "fontSize": 18,
      }
    }
    testID="counterText"
  >
    0
  </Themed.Text>
  <Themed.Button
    buttonStyle={
      Object {
        "borderRadius": 50,
        "minWidth": 40,
      }
    }
    onPress={[Function]}
    testID="counterIncButton"
    title="+"
    titleStyle={
      Object {
        "fontSize": 18,
        "fontWeight": "bold",
        "marginTop": -2,
      }
    }
  />
</View>
`;

exports[`Counter Component should render with optional styles 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-evenly",
      "width": 140,
    }
  }
>
  <Themed.Button
    buttonStyle={
      Object {
        "backgroundColor": "black",
        "borderRadius": 50,
        "minWidth": 40,
      }
    }
    onPress={[Function]}
    testID="counterDecButton"
    title="-"
    titleStyle={
      Object {
        "fontSize": 20,
        "fontWeight": "bold",
        "marginTop": -2,
      }
    }
  />
  <Themed.Text
    style={
      Object {
        "fontSize": 20,
      }
    }
    testID="counterText"
  >
    0
  </Themed.Text>
  <Themed.Button
    buttonStyle={
      Object {
        "backgroundColor": "black",
        "borderRadius": 50,
        "minWidth": 40,
      }
    }
    onPress={[Function]}
    testID="counterIncButton"
    title="+"
    titleStyle={
      Object {
        "fontSize": 20,
        "fontWeight": "bold",
        "marginTop": -2,
      }
    }
  />
</View>
`;

exports[`Counter Component should render without issues 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-evenly",
      "width": 140,
    }
  }
>
  <Themed.Button
    buttonStyle={
      Object {
        "borderRadius": 50,
        "minWidth": 40,
      }
    }
    onPress={[Function]}
    testID="counterDecButton"
    title="-"
    titleStyle={
      Object {
        "fontSize": 18,
        "fontWeight": "bold",
        "marginTop": -2,
      }
    }
  />
  <Themed.Text
    style={
      Object {
        "fontSize": 18,
      }
    }
    testID="counterText"
  >
    0
  </Themed.Text>
  <Themed.Button
    buttonStyle={
      Object {
        "borderRadius": 50,
        "minWidth": 40,
      }
    }
    onPress={[Function]}
    testID="counterIncButton"
    title="+"
    titleStyle={
      Object {
        "fontSize": 18,
        "fontWeight": "bold",
        "marginTop": -2,
      }
    }
  />
</View>
`;

exports[`Counter Component should render without min max values 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-evenly",
      "width": 140,
    }
  }
>
  <Themed.Button
    buttonStyle={
      Object {
        "borderRadius": 50,
        "minWidth": 40,
      }
    }
    onPress={[Function]}
    testID="counterDecButton"
    title="-"
    titleStyle={
      Object {
        "fontSize": 18,
        "fontWeight": "bold",
        "marginTop": -2,
      }
    }
  />
  <Themed.Text
    style={
      Object {
        "fontSize": 18,
      }
    }
    testID="counterText"
  >
    0
  </Themed.Text>
  <Themed.Button
    buttonStyle={
      Object {
        "borderRadius": 50,
        "minWidth": 40,
      }
    }
    onPress={[Function]}
    testID="counterIncButton"
    title="+"
    titleStyle={
      Object {
        "fontSize": 18,
        "fontWeight": "bold",
        "marginTop": -2,
      }
    }
  />
</View>
`;

exports[`Counter Component should render without onValueChange 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-evenly",
      "width": 140,
    }
  }
>
  <Themed.Button
    buttonStyle={
      Object {
        "borderRadius": 50,
        "minWidth": 40,
      }
    }
    onPress={[Function]}
    testID="counterDecButton"
    title="-"
    titleStyle={
      Object {
        "fontSize": 18,
        "fontWeight": "bold",
        "marginTop": -2,
      }
    }
  />
  <Themed.Text
    style={
      Object {
        "fontSize": 18,
      }
    }
    testID="counterText"
  >
    0
  </Themed.Text>
  <Themed.Button
    buttonStyle={
      Object {
        "borderRadius": 50,
        "minWidth": 40,
      }
    }
    onPress={[Function]}
    testID="counterIncButton"
    title="+"
    titleStyle={
      Object {
        "fontSize": 18,
        "fontWeight": "bold",
        "marginTop": -2,
      }
    }
  />
</View>
`;
